force-app/main/default/objects/Advertising_Opportunity__c/Advertising_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Core advertising opportunity record. Linked to Budget Lines, Vehicles, and ultimately to a Contract when promoted. Media_Cloud_Media_Plan_ID__c is populated when the opportunity is promoted to contract via the Matrix API.</description>
    <label>Advertising Opportunity</label>
    <nameField>
        <displayFormat>AO-{0000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertising Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>