force-app/main/default/objects/Advertising_Opportunity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Advertiser Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advertising Opportunities</relationshipLabel>
    <relationshipName>Advertising_Opportunities</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>