force-app/main/default/objects/Advertising_Opportunity__c/fields/Agency_Account__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account__c</fullName>
    <description>The advertising agency placing the buy on behalf of the advertiser. Populated for Agency Buy record type opportunities only.</description>
    <label>Agency Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency Advertising Opportunities</relationshipLabel>
    <relationshipName>Agency_Advertising_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>