force-app/main/default/objects/Advertising_Opportunity__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>