force-app/main/default/objects/Advertising_Opportunity__c/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <label>Estimated Revenue</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>