force-app/main/default/objects/Advertising_Opportunity__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>The target market or DMA (Designated Market Area) for this campaign. Copied to the Advertising Contract on promotion.</description>
    <label>Market</label>
    <length>80</length>
    <type>Text</type>
</CustomField>