force-app/main/default/objects/Advertising_Opportunity__c/fields/Matrix_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Sync_Status__c</fullName>
    <description>Tracks the current state of the outbound sync to Matrix. Failed records can be retried by changing Status back to Active or triggering a resync flow.</description>
    <label>Matrix Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>