force-app/main/default/objects/Advertising_Opportunity__c/fields/Media_Cloud_Media_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Media_Cloud_Media_Plan_ID__c</fullName>
    <description>The Matrix/Media Cloud media plan identifier. Populated by MatrixPromoteToContractAction when this opportunity is promoted to a contract.</description>
    <label>Media Cloud Media Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>