force-app/main/default/objects/Advertising_Opportunity__c/fields/Pitch_Project__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pitch Project</label>
    <referenceTo>Pitch_Project__c</referenceTo>
    <relationshipLabel>Advertising Opportunities</relationshipLabel>
    <relationshipName>Advertising_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>