force-app/main/default/objects/Advertising_Opportunity__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advertising Opportunities</relationshipLabel>
    <relationshipName>Advertising_Opportunities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>