force-app/main/default/objects/Advertising_Opportunity__c/fields/Primary_Demo__c.field-meta.xml
<CustomField>
    <fullName>Primary_Demo__c</fullName>
    <label>Primary Demo Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A18+</fullName>
            </value>
            <value>
                <fullName>A18-34</fullName>
            </value>
            <value>
                <fullName>A18-49</fullName>
            </value>
            <value>
                <fullName>A25-54</fullName>
            </value>
            <value>
                <fullName>A35-64</fullName>
            </value>
            <value>
                <fullName>W18+</fullName>
            </value>
            <value>
                <fullName>W18-34</fullName>
            </value>
            <value>
                <fullName>W18-49</fullName>
            </value>
            <value>
                <fullName>W25-54</fullName>
            </value>
            <value>
                <fullName>W35-64</fullName>
            </value>
            <value>
                <fullName>M18+</fullName>
            </value>
            <value>
                <fullName>M18-34</fullName>
            </value>
            <value>
                <fullName>M18-49</fullName>
            </value>
            <value>
                <fullName>M25-54</fullName>
            </value>
            <value>
                <fullName>M35-64</fullName>
            </value>
            <value>
                <fullName>Hispanic A18-49</fullName>
            </value>
            <value>
                <fullName>Hispanic A25-54</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>