force-app/main/default/objects/Advertising_Opportunity__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability (%)</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>