force-app/main/default/objects/Advertising_Opportunity__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Proposed campaign start date. Copied to Advertising Contract on promotion.</description>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>