force-app/main/default/objects/Advertising_Opportunity__c/fields/Total_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Amount__c</fullName>
    <label>Total Actual Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>