force-app/main/default/objects/Advertising_Opportunity__c/fields/Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget__c</fullName>
    <description>Total proposed advertising spend for this opportunity. Becomes the Total Contract Value when promoted to a contract.</description>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>