force-app/main/default/objects/Advertising_Opportunity__c/recordTypes/Agency_Buy.recordtype-meta.xml
<RecordType>
    <active>true</active>
    <description>Agency-placed buy — opportunity sourced through an advertising agency. Maps to Media Cloud Media Plan (Agency).</description>
    <label>Agency Buy</label>
</RecordType>